Bug 221872 - Ktorrent crashes without opening after system restart
Summary: Ktorrent crashes without opening after system restart
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 242449 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-09 02:28 UTC by Gary Triplett
Modified: 2010-06-22 18:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gary Triplett 2010-01-09 02:28:50 UTC
Application that crashed: ktorrent
Version of the application: 3.3.1
KDE Version: 4.3.4 (KDE 4.3.4)
Qt Version: 4.5.3
Operating System: Linux 2.6.31.9-174.fc12.i686 i686

What I was doing when the application crashed:
Ktorrent would crash seldomly and would restart without difficulty.  The program was on the desktop and paused when a system restart was performed.  Now, after a restart, the Ktorrent program simply won't start again.

 -- Backtrace:
Application: KTorrent (ktorrent), signal: Segmentation fault
[KCrash Handler]
#6  QMutex::lock (this=0xc) at thread/qmutex.cpp:152
#7  0x05759c81 in relock (this=<value optimized out>) at /usr/include/QtCore/qmutex.h:120
#8  QMutexLocker (this=<value optimized out>) at /usr/include/QtCore/qmutex.h:102
#9  dht::RPCServer::handlePackets (this=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/libbtcore/dht/rpcserver.cpp:222
#10 0x0574a2ad in dht::DHT::update (this=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/libbtcore/dht/dht.cpp:337
#11 0x05749d51 in dht::DHT::qt_metacall (this=<value optimized out>, _c=<value optimized out>, _id=0, _a=<value optimized out>)
    at /usr/src/debug/ktorrent-3.3.1/i686-redhat-linux-gnu/libbtcore/dht.moc:70
#12 0x02d23c0c in QMetaObject::activate (sender=<value optimized out>, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=<value optimized out>)
    at kernel/qobject.cpp:3112
#13 0x02d24843 in QMetaObject::activate (sender=<value optimized out>, m=<value optimized out>, local_signal_index=<value optimized out>, argv=<value optimized out>) at kernel/qobject.cpp:3186
#14 0x02d5e2f8 in QTimer::timeout (this=<value optimized out>) at .moc/release-shared/moc_qtimer.cpp:128
#15 0x02d2932e in QTimer::timerEvent (this=<value optimized out>, e=<value optimized out>) at kernel/qtimer.cpp:261
#16 0x02d1dd3f in QObject::event (this=<value optimized out>, e=<value optimized out>) at kernel/qobject.cpp:1074
#17 0x04055b24 in QApplicationPrivate::notify_helper (this=<value optimized out>, receiver=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:4065
#18 0x0405d281 in QApplication::notify (this=<value optimized out>, receiver=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:3605
#19 0x05d9407b in KApplication::notify (this=<value optimized out>, receiver=<value optimized out>, event=<value optimized out>) at /usr/src/debug/kdelibs-4.3.4/kdeui/kernel/kapplication.cpp:302
#20 0x02d0dd73 in QCoreApplication::notifyInternal (this=<value optimized out>, receiver=<value optimized out>, event=<value optimized out>) at kernel/qcoreapplication.cpp:610
#21 0x02d3b2be in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.h:213
#22 QTimerInfoList::activateTimers (event=<value optimized out>, receiver=<value optimized out>) at kernel/qeventdispatcher_unix.cpp:580
#23 0x02d38c21 in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:165
#24 0x009a4128 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#25 0x009a7a58 in ?? () from /lib/libglib-2.0.so.0
#26 0x009a7b84 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#27 0x02d38b6d in QEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#28 0x040f5356 in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#29 0x02d0c2aa in QEventLoop::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:149
#30 0x02d0c70a in QEventLoop::exec (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:201
#31 0x032520b1 in Phonon::PulseSupport::PulseSupport (this=<value optimized out>) at /usr/src/debug/phonon-4.3.80/phonon/pulsesupport.cpp:668
#32 0x0325213f in Phonon::PulseSupport::getInstance () at /usr/src/debug/phonon-4.3.80/phonon/pulsesupport.cpp:620
#33 0x03236cb4 in Phonon::AudioOutputPrivate::init (this=<value optimized out>, c=<value optimized out>) at /usr/src/debug/phonon-4.3.80/phonon/audiooutput.cpp:102
#34 0x00a9d630 in kt::MediaPlayer::MediaPlayer (this=<value optimized out>, parent=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/plugins/mediaplayer/mediaplayer.cpp:38
#35 0x00a98e0a in kt::MediaPlayerActivity::MediaPlayerActivity (this=<value optimized out>, core=<value optimized out>, parent=<value optimized out>)
    at /usr/src/debug/ktorrent-3.3.1/plugins/mediaplayer/mediaplayeractivity.cpp:55
#36 0x00a9a32f in kt::MediaPlayerPlugin::load (this=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/plugins/mediaplayer/mediaplayerplugin.cpp:51
#37 0x003c3e27 in kt::PluginManager::load (this=<value optimized out>, pi=<value optimized out>, idx=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/libktcore/plugin/pluginmanager.cpp:124
#38 0x003c46a5 in kt::PluginManager::loadPlugins (this=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/libktcore/plugin/pluginmanager.cpp:88
#39 0x003c497b in kt::PluginManager::loadPluginList (this=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/libktcore/plugin/pluginmanager.cpp:69
#40 0x0807c8c7 in kt::GUI::GUI (this=<value optimized out>, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/ktorrent/gui.cpp:112
#41 0x0807d27b in kt::App::newInstance (this=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/ktorrent/app.cpp:52
#42 0x05d9b771 in KUniqueApplicationAdaptor::newInstance (this=<value optimized out>, asn_id=<value optimized out>, args=<value optimized out>)
    at /usr/src/debug/kdelibs-4.3.4/kdeui/kernel/kuniqueapplication.cpp:459
#43 0x05d9be93 in KUniqueApplicationAdaptor::qt_metacall (this=<value optimized out>, _c=<value optimized out>, _id=0, _a=<value optimized out>)
    at /usr/src/debug/kdelibs-4.3.4/i686-redhat-linux-gnu/kdeui/kuniqueapplication_p.moc:75
#44 0x002dea3c in QDBusConnectionPrivate::deliverCall (this=<value optimized out>, object=<value optimized out>, msg=<value optimized out>, metaTypes=<value optimized out>, 
    slotIdx=<value optimized out>) at qdbusintegrator.cpp:891
#45 0x002dfbf8 in QDBusConnectionPrivate::activateCall (this=<value optimized out>, object=<value optimized out>, flags=<value optimized out>, msg=<value optimized out>) at qdbusintegrator.cpp:796
#46 0x002e04b5 in QDBusConnectionPrivate::activateObject (this=<value optimized out>, node=<value optimized out>, msg=<value optimized out>, pathStartPos=<value optimized out>)
    at qdbusintegrator.cpp:1347
#47 0x002e074b in QDBusActivateObjectEvent::placeMetaCall (this=<value optimized out>) at qdbusintegrator.cpp:1464
#48 0x02d1df96 in QObject::event (this=<value optimized out>, e=<value optimized out>) at kernel/qobject.cpp:1110
#49 0x02d0d68c in QCoreApplication::event (this=<value optimized out>, e=<value optimized out>) at kernel/qcoreapplication.cpp:1434
#50 0x0405b5f7 in QApplication::event (this=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:2317
#51 0x04055b24 in QApplicationPrivate::notify_helper (this=<value optimized out>, receiver=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:4065
#52 0x0405d281 in QApplication::notify (this=<value optimized out>, receiver=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:3605
#53 0x05d9407b in KApplication::notify (this=<value optimized out>, receiver=<value optimized out>, event=<value optimized out>) at /usr/src/debug/kdelibs-4.3.4/kdeui/kernel/kapplication.cpp:302
#54 0x02d0dd73 in QCoreApplication::notifyInternal (this=<value optimized out>, receiver=<value optimized out>, event=<value optimized out>) at kernel/qcoreapplication.cpp:610
#55 0x02d0e972 in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.h:213
#56 QCoreApplicationPrivate::sendPostedEvents (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.cpp:1247
#57 0x02d0eb2e in QCoreApplication::sendPostedEvents (receiver=<value optimized out>, event_type=<value optimized out>) at kernel/qcoreapplication.cpp:1140
#58 0x02d38f40 in sendPostedEvents () at kernel/qcoreapplication.h:218
#59 postEventSourceDispatch () at kernel/qeventdispatcher_glib.cpp:210
#60 0x009a4128 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#61 0x009a7a58 in ?? () from /lib/libglib-2.0.so.0
#62 0x009a7b84 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#63 0x02d38b6d in QEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#64 0x040f5356 in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#65 0x02d0c2aa in QEventLoop::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:149
#66 0x02d0c70a in QEventLoop::exec (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:201
#67 0x02d0ebf7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#68 0x040559a8 in QApplication::exec () at kernel/qapplication.cpp:3525
#69 0x08065481 in main (argc=<value optimized out>, argv=<value optimized out>) at /usr/src/debug/ktorrent-3.3.1/ktorrent/main.cpp:172

This bug may be a duplicate of or related to bug 214096

Reported using DrKonqi
Comment 1 Joris Guisson 2010-01-09 12:27:14 UTC
SVN commit 1072064 by guisson:

Fix crashes when DHT socket could not be bound 

BUG: 221872

 M  +1 -0      ChangeLog  
 M  +17 -7     libbtcore/dht/rpcserver.cpp  
 M  +1 -1      plugins/search/opensearch/ktorrents/opensearch.xml  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1072064
Comment 2 Joris Guisson 2010-06-22 18:11:00 UTC
*** Bug 242449 has been marked as a duplicate of this bug. ***