Fix crashes when DHT socket could not be bound

BUG: 221872

svn path=/trunk/extragear/network/ktorrent/; revision=1072064